--- a/src/Rtl.TvMaze.DataAccess/Rtl.TvMaze.DataAccess.csproj
+++ b/src/Rtl.TvMaze.DataAccess/Rtl.TvMaze.DataAccess.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.3" />
   </ItemGroup>
 
 </Project>
