--- a/src/Rtl.TvMaze.Scraper/appsettings.json
+++ b/src/Rtl.TvMaze.Scraper/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://root:example@mongo:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "TvMaze": {
+    "BaseUri": "http://api.tvmaze.com"
   }
 }
