--- a/src/Rtl.TvMaze.WebApi/appsettings.json
+++ b/src/Rtl.TvMaze.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://root:example@mongo:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TvMaze": {
+    "BaseUri": "http://api.tvmaze.com"
+  }
 }
